--- a/style2.css
+++ b/style2.css
@@ -37,6 +37,8 @@ nav a {
     text-align: center;
 }
 
+input[type="text"],
+input[type="date"],
 input[type="email"],
 input[type="password"] {
     width: 100%;
